
  for details.

* There is now a new ``IContext`` interface available. If you make
  your class implement that interface, it (and its subclasses) will be
  candidates for being a context in a module (for automatic context
  lookup if ``grok.context`` is not present). This relies on a feature
  introduced in grokcore.component 1.1.

Bug fixes
---------

* Removed first testsetup hack from grok.testing.

* Version 2.1 of z3c.autoinclude contained code that caused Grok to
  fail to start on some platforms if the system-supplied Python was
  used (at least on some versions of Ubuntu and Debian). Now include
  version 2.2 of z3c.autoinclude which should fix this problem. This
  fix was also made on Grok 0.12 in its online versions list after
  release.

* Port fix of zope.formlib to correctly adapt the context to a FormField's
  interface, not the field.

0.12 (2008-04-22)
=================

Feature changes
---------------

* The new release needs new version of grokproject, please do::

    $ easy_install -U grokproject

* Added testsetup classes in grok.testing to improve easy setup of
  unit- and functional tests.

* Add support for viewlets and viewlet managers, ``grok.Viewlet``
  and ``grok.ViewletManager``.

* Add a new directive, ``grok.order()``, which can be used to help
  sort components. At the time it is not used yet, but we intend to
  use it for the viewlets support. Note that this means Grok now
  requires Martian 0.9.3 or higher. See ``grok.interfaces`` for more
  documentation on this directive.

* Now depend on ``z3c.autoinclude``. This allows the use of the
  ``<includeDependencies package="."/>`` directive, which automatically loads
  up ZCML needed for the dependencies listed in your project's
  ``setup.py``. The new release of grokproject adds this line
  automatically. Upgrade ``grokproject`` to make use of this
  functionality in new projects::

    $ easy_install -U grokproject
